# lvm-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  README.txt  build.rs  wrapper.h
debian/: changelog
src/: config.rs  lvm.rs  lvmapp.rs  main.rs
src/lvmapp/: lvinfo.rs  lvview.rs  popup.rs  res.rs  statusbar.rs  vgpvinfo.rs  vgview.rs
