[package]
name = "lvm-tui"
version = "0.1.1"
edition = "2024"
license = "n/a"
authors = ["kluxklux29@gmail.com"]
description = "Console tool showing infomation about LVM."

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
itertools = "0.13"
unicode-width = "=0.2.0"
nix = "0.30.1"
tui-widget-list = "0.13.2"
derive_setters = "0.1.8"

[package.metadata.deb]
section = "unknown"
revision = "5"
changelog = "debian/changelog"
depends = "lvm2"

[package.metadata.rpm]
package = "lvm-tui"

[package.metadata.rpm.cargo]
buildflags = ["--release"]


